# turtle_get_data

./: CMakeLists.txt  package.xml
config/controllers/: dwb.yaml
src/: get_motor_distance.cpp  get_motor_effort.cpp  get_turtle_data.cpp
turtle_get_data/: CMakeLists.txt  package.xml
turtle_get_data/config/: 5.pgm  5.yaml  arena1.pgm  arena1.yaml  arena2.pgm  arena2.yaml  b.pgm  b.yaml  dwb.yaml  map2.pgm  map2.yaml  mppic.yaml  rpp.yaml  teb.yaml  waffle.yaml
turtle_get_data/launch/: navigation.launch.py
turtle_get_data/src/: get_turtle_data.cpp  nav2_client.cpp
turtle_get_data_interfaces/: CMakeLists.txt  package.xml
turtle_get_data_interfaces/action/: Mission.action
